--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/GCP/cicleci-test
     docker:
-      - image: circleci/openjdk:[7-jdk]
+      - image: openjdk:7-jdk
     steps:
       - checkout
       - run: echo "hello  world"
